<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.homeScreenPods.HomeScreenPodsActivity">

    <com.interapt.togglit.ui.custom.views.CustomizableToolbar
        android:id="@+id/home_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:theme="@style/AppTheme.AppBarOverlayGreen">

        <TextView
            android:id="@+id/homescreen_bar_title"
            style="@style/greenToolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:text="@string/hug_reading_program"
            android:textSize="18sp" />
    </com.interapt.togglit.ui.custom.views.CustomizableToolbar>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/student_image"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rsz_kid" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center|bottom"
                android:text="@string/student_information"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:layout_marginTop="-5dp"
                android:gravity="center|top"
                android:text="@string/view_student_profile_and_add_reading_progress"
                android:textColor="@color/black_alpha_40"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#f0f0f0" />

            <ImageView
                android:id="@+id/volunteer_image"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rsz_reading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center|bottom"
                android:text="@string/volunteer_information"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginTop="-5dp"
                android:gravity="center|top"
                android:text="@string/view_information_about_volunteers"
                android:textColor="@color/black_alpha_40"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#f0f0f0" />

            <ImageView
                android:id="@+id/school_image"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="centerCrop"
                android:src="@drawable/school" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center|bottom"
                android:text="School Directory"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="-5dp"
                android:gravity="center|top"
                android:text="View directory of schools"
                android:textColor="@color/black_alpha_40"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/content_home_screen_pods" />

    <include layout="@layout/layout_avl_progress" />


</LinearLayout>
