<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sign_up_img_logo"
            android:layout_width="124dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/hug_h_logo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/items_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_wrapper"
            style="@style/textAppearanceRobotoBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/tv_color_white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/et_email"
                style="@style/textAppearanceRobotoLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_input_layout_hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_wrapper"
            style="@style/textAppearanceRobotoLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/tv_color_white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


            <EditText
                android:id="@+id/et_password"
                style="@style/textAppearanceRobotoLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_input_layout_hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_wrapper"
            style="@style/textAppearanceRobotoLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/tv_color_white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/til_confirm_password"
                style="@style/textAppearanceRobotoLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_input_layout_hint_confirm_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <com.interapt.togglit.ui.custom.views.CustomizableButtonView
            android:id="@+id/button_sign_up_action"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/txt_sing_up_button"
            android:textAppearance="@style/TextAppearance.FontPath.Roboto.Regular"
            android:textSize="21sp"
            android:theme="@style/accountButton" />

    </LinearLayout>


</LinearLayout>