<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/forgot_pass_img_logo"
            android:layout_width="49dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/hug_h_logo" />
    </LinearLayout>


    <LinearLayout

        android:id="@+id/forgot_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_password_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/forgot_password_til_email"
                style="@style/textAppearanceRobotoBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_alpha_40"
                android:hint="@string/txt_input_layout_hint_email"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <com.interapt.togglit.ui.custom.views.CustomizableButtonView
            android:id="@+id/button_forgot_password_submit_action"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/txt_forgot_password_button"
            android:textAppearance="@style/TextAppearance.FontPath.Roboto.Regular"
            android:textSize="21sp"
            android:theme="@style/accountButton" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgot_password_success_views_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_success_check"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/oval_43_check" />

        </FrameLayout>


        <TextView
            android:id="@+id/tv_forgot_pass_success_message"
            style="@style/textAppearanceRobotoBold"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black_alpha_40"
            android:gravity="center"
            android:text="@string/txt_forgot_password_success" />

        <TextView
            android:id="@+id/tv_check_email_message"
            style="@style/textAppearanceRobotoLightSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black_alpha_40"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:gravity="center"
            android:text="@string/txt_forgot_password_description" />

        <com.interapt.togglit.ui.custom.views.CustomizableButtonView
            android:id="@+id/button_forgot_password_open_email_action"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/txt_forgot_password_open_email_button"
            android:textAppearance="@style/TextAppearance.FontPath.Roboto.Regular"
            android:textSize="21sp"
            android:theme="@style/accountButton" />
    </LinearLayout>


</LinearLayout>


