<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentWhite"
        android:orientation="vertical">

        <com.interapt.togglit.ui.custom.views.CustomizableToolbar
            android:id="@+id/school_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:theme="@style/AppTheme.AppBarOverlayGreen">

            <TextView
                style="@style/greenToolBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_profile" />

        </com.interapt.togglit.ui.custom.views.CustomizableToolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/white_outer_border" />

            <ImageView
                android:id="@+id/school_profile"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@drawable/profile_circular_border_imageview"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:src="@drawable/university" />

            <TextView
                android:id="@+id/school_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/school_profile"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="11dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccentWhite"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/phone_number_school"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:textColorLink="@color/black_alpha_40"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/principal_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/principal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:textColor="@color/black_alpha_40"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/student_goal_clarity_person"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/student_goal_clarity_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:textColor="@color/black_alpha_40"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/student_goal_clarity_person_nphone_number"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/student_goal_clarity_person_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:textColorLink="@color/black_alpha_40"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/student_goal_clarity_person_nemail_address"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/student_goal_clarity_person_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:textColorLink="@color/black_alpha_40"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/school_address"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/school_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingEnd="40dp"
            android:paddingStart="20dp"
            android:textColor="@color/black_alpha_40"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
