<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/student_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccentWhite"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/student_imageview"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:background="@drawable/profile_circular_border_imageview"
        android:contentDescription="@string/student_image"
        android:scaleType="fitStart" />


    <TextView
        android:id="@+id/student_initial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/student_imageview"
        android:layout_alignLeft="@+id/student_imageview"
        android:layout_alignRight="@+id/student_imageview"
        android:layout_alignTop="@+id/student_imageview"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student_name"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/student_imageview"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:textSize="15sp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student_name"
        android:layout_toEndOf="@+id/student_imageview"
        android:paddingEnd="12dp"
        android:paddingStart="20dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.FontPath.Roboto.Light"
        android:textSize="12sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/school_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="36dp"
        android:background="#d6d6d6" />

    <TextView
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/student_imageview"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/student_imageview"
        android:paddingEnd="12dp"
        android:paddingStart="20dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryBlue"
        android:textSize="17sp" />


</RelativeLayout>